; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_nonrefreshing.c_test_odb_backend_nonrefreshing__readheader_is_invoked_once_on_success.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_nonrefreshing.c_test_odb_backend_nonrefreshing__readheader_is_invoked_once_on_success.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@_repo = common dso_local global i32 0, align 4
@_existing_oid = common dso_local global i32 0, align 4
@_fake = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_backend_nonrefreshing__readheader_is_invoked_once_on_success() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = load i32, i32* @_repo, align 4
  %5 = call i32 @git_repository_odb__weakptr(i32** %1, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_odb_read_header(i64* %2, i32* %3, i32* %7, i32* @_existing_oid)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @_fake, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @cl_assert_equal_i(i32 1, i32 %12)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_odb__weakptr(i32**, i32) #1

declare dso_local i32 @git_odb_read_header(i64*, i32*, i32*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
